# tinyunit

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  dist.bat  minunit.c  minunit.h  minunit_example.c  minunit_vxworks.c  tinyunit.c  tinyunit.h  tinyunit_example.c  tinyunit_readme_sample.c
.github/workflows/: main.yml
cmake/: ConfigHelpers.cmake  CpkHelpers.cmake  CpkRunTest.cmake  tinyunit.pc.cmake  tinyunitConfig.in.cmake  tinyunit_add_test.cmake  tinyunit_run_test_wrapper.cmake
cmake/generators/: PLATFORM_ID.md
cmake/scripts/: build.sh  install-ios.sh  install-vxworks.bat
tests/: CMakeLists.txt  tinyunit_example.c  tinyunit_example_fail.c  tinyunit_readme_sample.c
